# DeviceManager

./: .gitignore  DeviceManager.desktop  DeviceManager.spec  Dockerfile.appimage  README.md  build.sh  build_appimage.sh  build_appimage_docker.sh  main.py  main.qml  pyproject.toml  requirements.txt
qml/: Main.qml
qml/components/: DeviceDetailsPanel.qml  DeviceListPanel.qml  TopBar.qml
src/devicemanager/: __init__.py  device_manager.py
